--- a/index.html
+++ b/index.html
@@ -6,88 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 		<title>Where's My Meter</title>
 		<link rel="icon" type="images/png" href="favicon-32x32.png" sizes="32x32" />
-		<!--<link rel="shortcut icon" href="images/shortcut.ico">
-		<!--[if IE 8]>
-    <link rel="stylesheet" type="text/css"  href="css/main.css" />
-    <![endif]-->
-		<style type="text/css">
-		*{box-sizing: border-box;}
-      body,html {
-        width:100%;
-        height:100%;
-        margin:0;
-        padding:0;
-        overflow:hidden;
-      }
-      #main-loading{
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        overflow: hidden;
-      }
-      #main-loading #ie-note{
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-      }
-      #main-loading #ie-note {
-        width: 586px;
-        height: 253px;
-        background-image: url('images/notes.png');
-        padding: 0 30px 40px 30px;
-        font-size: 14px;
-        color: #596679;
-      }
-      #ie-note .hint-title{
-        height: 40px;
-        line-height: 48px;
-        text-align: left;
-        font-weight: bold;
-      }
-      #ie-note .hint-img{
-        background-image: url('images/hint.png');
-        background-position: left;
-        padding-left: 40px;
-        margin-top: 20px;
-        background-repeat: no-repeat;
-        height: 30px;
-        text-align: left;
-        line-height: 30px;
-        font-weight: bold;
-      }
-      #ie-note span{
-        display: block;
-        line-height: 14px;
-      }
-      #main-page{
-        display: none;
-        width: 100%;
-        height: 100%;
-        position: relative;
-      }
-
-      #jimu-layout-manager{
-        width: 100%;
-        height: 100%;
-        position: absolute;
-      }
-		</style>
+    	<link rel="stylesheet" type="text/css"  href="css/main.css" />
 		<script>
-			/*******************************
-			* This is the function you can modify to customize the loading page
-			* This function will be invoked when one resource is loaded.
-			********************************/
 			console.log('working on startup');
 		</script>
 	</head>
 	<body>
 
-		<div id="main-page">
-			<div id="jimu-layout-manager">Waiting for first try</div>
-		</div>
+		<iframe src="desktop/index.html" style="width:100%;height:100%;"></iframe>
 
 		<script src="js/main.js"></script>
 	</body>
