Updated iframe styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 
-		<iframe src="desktop/index.html" style="width:100%;height:100%;"></iframe>
+		<iframe src="desktop/index.html" style="position:absolute;width:100%;height:100%;"></iframe>
 
 		<script src="js/main.js"></script>
 	</body>
