--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			console.log('working on startup');
 		</script>
 	</head>
-	<body>
+	<body style="margin:0px;">
 
 		<iframe src="desktop/index.html" style="position:absolute;width:100%;height:100%;"></iframe>
 
