--- a/mobile/index.html
+++ b/mobile/index.html
@@ -3,7 +3,7 @@
 
 	<body style="margin:0px;">
 
-		<iframe id="parent_map_iframe" src="www.google.com" style="position:absolute;width:100%;height:100%;"></iframe>
+	<div>I love Nancy Primintela <3</div>
 
 	</body>
 </html>
