New website template

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <header id="header" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div id="logo">
-      <h1><a href="index.html">Lacegant</a></h1>
+      <h1><a href="index.html">Primintela</a></h1>
       <p>euismod pulvinar donec et est</p>
     </div>
     <!-- ################################################################################################ -->
