--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <div id="logo">
       <h1><a href="index.html">Primintela</a></h1>
-      <p>euismod pulvinar donec et est</p>
+      <p>Ni Camba Ni Coya Ni Tapaco - Carajo!</p>
     </div>
     <!-- ################################################################################################ -->
   </header>
@@ -94,9 +94,9 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article class="introtxt">
-      <h2 class="heading">Aliquam mauris vitae</h2>
-      <p>Consequat risus eget eros pharetra elementum vivamus non enim nisl cras bibendum purus sagittis dui tincidunt suscipit proin&hellip;</p>
-      <footer><a class="btn inverse medium" href="#">efficitur justo nulla</a></footer>
+      <h2 class="heading">LoveNote</h2>
+      <p>Capturing love one note at a time</p>
+      <footer><a class="btn inverse medium" href="#">Download LoveNote</a></footer>
     </article>
     <!-- ################################################################################################ -->
   </div>
@@ -108,11 +108,11 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="cta" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article class="center">
-      <h2 class="heading font-x3">Pulvinar nunc elit duis malesuada</h2>
+      <h2 class="heading font-x3">Find Your Love Score</h2>
       <footer>
         <ul class="nospace inline pushright">
-          <li><a class="btn" href="#">Condimentum turpis</a></li>
-          <li><a class="btn inverse" href="#">Commodo nullam nec</a></li>
+          <li><a class="btn" href="#">Make Free Account</a></li>
+          <li><a class="btn inverse" href="#">Find Out More</a></li>
         </ul>
       </footer>
     </article>
