--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <div id="logo">
       <h1><a href="index.html">Primintela</a></h1>
-      <p>Ni Camba Ni Coya Ni Tapaco - Carajo!</p>
+      <p>Ni camba ni colla ni chapaco - Camireña carajo!</p>
     </div>
     <!-- ################################################################################################ -->
   </header>
@@ -95,7 +95,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <article class="introtxt">
       <h2 class="heading">LoveNote</h2>
-      <p>Capturing love one note at a time</p>
+      <p>capturing Love one Note at a time</p>
       <footer><a class="btn inverse medium" href="#">Download LoveNote</a></footer>
     </article>
     <!-- ################################################################################################ -->
