--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="topbar" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="fl_left">
-      <ul class="nospace inline pushright">
-        <li><i class="fa fa-sign-in"></i> <a href="#">Login</a></li>
+      <!-- <ul class="nospace inline pushright">
+        <!-- <li><i class="fa fa-sign-in"></i> <a href="#">Login</a></li>
         <li><i class="fa fa-user"></i> <a href="#">Register</a></li>
-      </ul>
+      </ul>-->
     </div>
     <div class="fl_right">
-      <ul class="nospace inline pushright">
+      <!-- <ul class="nospace inline pushright">
         <li><i class="fa fa-phone"></i> +00 (123) 456 7890</li>
         <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
-      </ul>
+      </ul>-->
     </div>
     <!-- ################################################################################################ -->
   </div>
@@ -44,7 +44,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <div id="logo">
       <h1><a href="index.html">Primintela</a></h1>
-      <p>Ni camba ni colla ni chapaco - Camireña carajo!</p>
+      <p>ni camba ni colla ni chapaco - camireña caramba!</p>
     </div>
     <!-- ################################################################################################ -->
   </header>
@@ -94,9 +94,10 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article class="introtxt">
+      <!-- <img src="images/favicon.ico/favicon-32x32.png" style="width:20px;height:20px;"> -->
       <h2 class="heading">LoveNote</h2>
       <p>capturing Love one Note at a time</p>
-      <footer><a class="btn inverse medium" href="#">Download LoveNote</a></footer>
+      <footer><a class="btn inverse medium" href="#">Download LoveNote <img src="images/favicon.ico/favicon-32x32.png" style="width:20px;height:20px;"></a></footer>
     </article>
     <!-- ################################################################################################ -->
   </div>
@@ -104,7 +105,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay coloured" style="background-image:url('images/demo/backgrounds/02.png');">
+<div class="wrapper bgded overlay coloured">
   <div id="cta" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article class="center">
@@ -126,8 +127,8 @@ Licence URI: http://www.os-templates.com/template-terms
   <div class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="center btmspace-50">
-      <h2 class="heading">Egestas vitae urna a imperdiet</h2>
-      <p class="nospace">Feugiat leo lobortis augue vivamus dignissim leo at purus interdum posuere praesent tortor</p>
+      <h2 class="heading">How It Works</h2>
+      <p class="nospace">Use the app to help get to know your significant other</p>
     </div>
     <ul class="nospace group btmspace-50 elements">
       <li class="one_quarter first">
