Try to Fix App Preview

--- a/lovenote_preview/production/index.html
+++ b/lovenote_preview/production/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Gentelella Alela! | </title>
+    <link rel="icon" type="image/png" sizes="16x16" href="../../images/favicon.ico/favicon-16x16.png">
+    <title>App Preview</title>
 
     <!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
