--- a/lovenote_preview/production/index2.html
+++ b/lovenote_preview/production/index2.html
@@ -28,7 +28,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><img src="../../images/favicon.ico/android-icon-36x36.png"><span> LoveNote</span></a>
+              <a href="index.html" class="site_title"><img src="../../images/favicon.ico/android-icon-36x36.png" href="https://haonrolyat.github.io/"><span> LoveNote</span></a>
             </div>
 
             <div class="clearfix"></div>
