Updated FR Tab Info

--- a/pages/feature_requests.html
+++ b/pages/feature_requests.html
@@ -8,10 +8,11 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Lacegant | Pages | Gallery</title>
+<title>Feature Requests</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.ico/favicon-16x16.png">
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
